adicionado os elementos graficos e esqueleto do projeto pronto

--- a/index.html
+++ b/index.html
@@ -73,28 +73,28 @@
       <h1>Beneficios</h1>
     </div>
     <div id="sessao3_S1">
-      <div class="elento">
+      <div class="elemento">
         <div class="imagem">
-
+          <img src="assets/batata.png" alt="">
         </div>
         <div class="titulo_S1">
-
+          <h2>SustentAvel</h2>
         </div>
       </div>
-      <div class="elento">
+      <div class="elemento">
         <div class="imagem">
-
+          <img src="assets/chef.png" alt="">
         </div>
         <div class="titulo_S1">
-
+          <h2>Artesanal</h2>
         </div>
       </div>
-      <div class="elento">
+      <div class="elemento">
         <div class="imagem">
-
+          <img src="assets/chips.png" alt="">
         </div>
         <div class="titulo_S1">
-
+          <h2>Saudavel</h2>
         </div>
       </div>
     </div>
@@ -115,9 +115,12 @@
   </section>
   <section class="sessao5">
     <div class="titulo_sessao">
-      <h1>Produto</h1>
+      <h1>Contatos</h1>
     </div>
     <div id="card_5">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1200px-Instagram_icon.png" alt="">
+      <img src="https://static.vecteezy.com/system/resources/thumbnails/021/495/979/small/whatsapp-social-media-logo-icon-free-png.png" alt="">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Facebook_logo_%28square%29.png/480px-Facebook_logo_%28square%29.png" alt="">
     </div>
   </section>
   <footer>
