--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
       <h1>Produto</h1>
     </div>
     <div class="row">
-      <div class="texto_produto">As batatas são uma fonte de carboidratos, que são a principal fonte de energia para o corpo. Portanto, as batatas fritas podem fornecer um impulso rápido de energia.</div>
-      <div class="texto_produto">2</div>
-      <div class="texto_produto">As batatas contêm fibra, que é importante para a saúde digestiva e pode ajudar a manter a saciedade.</div>
+      <div class="texto_produto" id="texto_prod">As batatas são uma fonte de carboidratos, que são a principal fonte de energia para o corpo. Portanto, as batatas fritas podem fornecer um impulso rápido de energia.</div>
+      <div class="texto_produto"><img src="assets/cima.png" alt="" style="width: 100px;"></div>
+      <div class="texto_produto" id="texto_prod">As batatas contêm fibra, que é importante para a saúde digestiva e pode ajudar a manter a saciedade.</div>
     </div>
     <div class="row">
-      <div class="texto_produto">4</div>
+      <div class="texto_produto"><img src="assets/esquerda.png" alt="" style="width: 100px;"></div>
       <div class="img_prod"><img src="assets/produto_1.png" alt="imagem produto batata" ></div>
-      <div class="texto_produto">6</div>
+      <div class="texto_produto" ><img src="assets/direita.png" alt="" style="width: 100px;"></div>
     </div>
     <div class="row">
-      <div class="texto_produto">As batatas contêm vitamina C e potássio, que são nutrientes essenciais para o sistema imunológico e a saúde cardiovascular, respectivamente. No entanto, o processo de fritura pode reduzir a quantidade de vitamina C</div>
-      <div class="texto_produto">8</div>
-      <div class="texto_produto">As batatas fritas comerciais muitas vezes contêm altas quantidades de sal e aditivos para melhorar o sabor e prolongar a vida útil.</div>
+      <div class="texto_produto" id="texto_prod">As batatas contêm vitamina C e potássio, que são nutrientes essenciais para o sistema imunológico e a saúde cardiovascular, respectivamente. No entanto, o processo de fritura pode reduzir a quantidade de vitamina C</div>
+      <div class="texto_produto"><img src="assets/baixo.png" alt="" style="width: 100px;"></div>
+      <div class="texto_produto" id="texto_prod">As batatas fritas comerciais muitas vezes contêm altas quantidades de sal e aditivos para melhorar o sabor e prolongar a vida útil.</div>
     </div>
     
     </div>
