sessão 2 refeita com grid e sessão 1 ajustada

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </div>
     <div id="sessa1_direita">
       <img src="assets/logo_vermelha.png" alt="Logo da empresa Life Chips">
+      <div id="batata"><img src="assets/chips.png" alt=""></div>
     </div>
   </section>
   <section class="sessao2">
@@ -51,21 +52,15 @@
       <h1>Produto</h1>
     </div>
     <div class="row">
-      <div class="texto_produto" id="texto_prod">As batatas são uma fonte de carboidratos, que são a principal fonte de energia para o corpo. Portanto, as batatas fritas podem fornecer um impulso rápido de energia.</div>
-      <div class="texto_produto"><img src="assets/cima.png" alt="" style="width: 100px;"></div>
-      <div class="texto_produto" id="texto_prod">As batatas contêm fibra, que é importante para a saúde digestiva e pode ajudar a manter a saciedade.</div>
-    </div>
-    <div class="row">
-      <div class="texto_produto"><img src="assets/esquerda.png" alt="" style="width: 100px;"></div>
-      <div class="img_prod"><img src="assets/produto_1.png" alt="imagem produto batata" ></div>
-      <div class="texto_produto" ><img src="assets/direita.png" alt="" style="width: 100px;"></div>
-    </div>
-    <div class="row">
-      <div class="texto_produto" id="texto_prod">As batatas contêm vitamina C e potássio, que são nutrientes essenciais para o sistema imunológico e a saúde cardiovascular, respectivamente. No entanto, o processo de fritura pode reduzir a quantidade de vitamina C</div>
-      <div class="texto_produto"><img src="assets/baixo.png" alt="" style="width: 100px;"></div>
-      <div class="texto_produto" id="texto_prod">As batatas fritas comerciais muitas vezes contêm altas quantidades de sal e aditivos para melhorar o sabor e prolongar a vida útil.</div>
-    </div>
-    
+      <div class="texto_produto" id="texto_prod_cima_esquerda">As batatas são uma fonte de carboidratos, que são a principal fonte de energia para o corpo. Portanto, as batatas fritas podem fornecer um impulso rápido de energia.</div>
+      <div class="texto_produto" id="img_prod_cima"><img src="assets/cima.png" alt="" style="width: 100px;"></div>
+      <div class="texto_produto" id="texto_prod_cima_direita">As batatas contêm fibra, que é importante para a saúde digestiva e pode ajudar a manter a saciedade.</div>
+      <div class="texto_produto" id="img_prod_esquerda"><img src="assets/esquerda.png" alt="" style="width: 100px;"></div>
+      <div class="texto_produto" id="img_prod"><img src="assets/produto_1.png" alt="imagem produto batata" ></div>
+      <div class="texto_produto" id="img_prod_direita"><img src="assets/direita.png" alt="" style="width: 100px;"></div>
+      <div class="texto_produto" id="texto_prod_baixo_esquerda">As batatas contêm vitamina C e potássio, que são nutrientes essenciais para o sistema imunológico e a saúde cardiovascular, respectivamente. No entanto, o processo de fritura pode reduzir a quantidade de vitamina C</div>
+      <div class="texto_produto" id="img_prod_baixo"><img src="assets/baixo.png" alt="" style="width: 100px;"></div>
+      <div class="texto_produto" id="texto_prod_baixo_diretita">As batatas fritas comerciais muitas vezes contêm altas quantidades de sal e aditivos para melhorar o sabor e prolongar a vida útil.</div>
     </div>
   </section>
   <section class="sessao3">
@@ -120,7 +115,7 @@
     <div id="card_5">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1200px-Instagram_icon.png" alt="">
       <img src="https://static.vecteezy.com/system/resources/thumbnails/021/495/979/small/whatsapp-social-media-logo-icon-free-png.png" alt="">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Facebook_logo_%28square%29.png/480px-Facebook_logo_%28square%29.png" alt="">
+      <a href="https://www.doritos.com"><img src="https://cdn-icons-png.flaticon.com/512/281/281769.png" alt=""></a>
     </div>
   </section>
   <footer>
