--- a/index.html
+++ b/index.html
@@ -65,31 +65,27 @@
   </section>
   <section class="sessao3">
     <div class="titulo_sessao">
-      <h1>Beneficios</h1>
+      <h1>Vantagens</h1>
     </div>
     <div id="sessao3_S1">
-      <div class="elemento">
-        <div class="imagem">
-          <img src="assets/batata.png" alt="">
-        </div>
-        <div class="titulo_S1">
-          <h2>SustentAvel</h2>
-        </div>
-      </div>
-      <div class="elemento">
-        <div class="imagem">
+      <div class="elemento_e">
+        <div class="imagem_e">
           <img src="assets/chef.png" alt="">
         </div>
-        <div class="titulo_S1">
+        <div class="titulo_S1_e">
           <h2>Artesanal</h2>
+          <br>
+          <p>Lorem ipsum dolor sit amet. Qui ipsum eligendi sit fugit placeat qui quas nemo eum odit autem aut dolorum Quis ut dolorem aperiam ut repellat dolor. Et quos asperiores est consectetur galisum est quae aliquid qui quis porro in enim sequi ad quia velit. Sit quisquam deleniti ut minima dicta est corrupti sequi et doloremque officia aut possimus illum qui corrupti quos sit odio perspiciatis.</p>
         </div>
       </div>
-      <div class="elemento">
-        <div class="imagem">
+      <div class="elemento_d">
+        <div class="imagem_d">
           <img src="assets/chips.png" alt="">
         </div>
-        <div class="titulo_S1">
+        <div class="titulo_S1_d">
           <h2>Saudavel</h2>
+          <br>
+          <p>Lorem ipsum dolor sit amet. Qui ipsum eligendi sit fugit placeat qui quas nemo eum odit autem aut dolorum Quis ut dolorem aperiam ut repellat dolor. Et quos asperiores est consectetur galisum est quae aliquid qui quis porro in enim sequi ad quia velit. Sit quisquam deleniti ut minima dicta est corrupti sequi et doloremque officia aut possimus illum qui corrupti quos sit odio perspiciatis.</p>
         </div>
       </div>
     </div>
