--- a/index.html
+++ b/index.html
@@ -91,16 +91,30 @@
     </div>
   </section>
   <section class="sessao4">
+    <div class="titulo_sessao">
+      <h1>vai bem com lifechips</h1>
+    </div>
     <div id="card_4">
-      <div id="titulo_card_4">
-        <img src="assets/logo_titulo_branca.png" alt="">
+      <div id="img_4">
+        <img src="assets/abacate.png" alt="">
       </div>
-      <div id="texto_card_4">
-        A Lifechips é uma empresa que busca oferecer produtos saborosos e saudáveis, produzidos de forma artesanal 
-        com ingredientes de alta qualidade. O foco é oferecer aos consumidores uma opção de lanche prático e rápido, sem 
-        abrir mão do sabor e da qualidade.
-        saudáveis, produzidos de forma artesanal 
-        com ingredientes de alta qualidade. O foco é oferecer aos consumidores uma opção de lanche prático
+      <div class="titulo_4">
+        Molho de Abacate com Limão
+      </div>
+      <div class="ingredientes">
+        <h2>Ingrediente:</h2>
+        <ul>
+          <li>1 abacate maduro</li>
+          <li>suco de 1 limão</li>
+          <li>2 colheres de sopa de coentro picado</li>
+          <li>sal e pimenta a gosto.</li>
+        </ul>
+      </div>
+      <div class="linha4">
+        <div class="preparo">
+          Modo de preparo: Amasse o abacate em uma tigela e misture com o suco de limão e o coentro picado. Tempere com sal e pimenta a gosto. Misture bem até obter uma consistência cremosa. Sirva com os chips de batata.
+        </div>
+        <div class="imagemlud"><img src="assets/molhoAbacate.png" alt=""></div>
       </div>
     </div>
   </section>
