--- a/index.html
+++ b/index.html
@@ -13,19 +13,16 @@
     <div id="menu">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Página inicial</a>
+          <a class="nav-link" href="#inicio">Página inicial</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Sobre</a>
+          <a class="nav-link" href="#sobre">Sobre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Serviços</a>
+          <a class="nav-link" href="#servico">Serviços</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contato</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Desativado</a>
+          <a class="nav-link" href="#contato">Contato</a>
         </li>
       </ul>
     </div>
@@ -33,7 +30,7 @@
   <section>
 
   </section>
-  <section class="sessao1">
+  <section class="sessao1" id="inicio">
     <div id="sessa1_esquerda">
       <div id="texto_S1">
         Felicidade em cada mordida.
@@ -47,7 +44,7 @@
       <div id="batata"><img src="assets/chips.png" alt=""></div>
     </div>
   </section>
-  <section class="sessao2">
+  <section class="sessao2" id="servico">
     <div class="titulo_sessao">
       <h1>Produto</h1>
     </div>
@@ -118,11 +115,25 @@
       </div>
     </div>
   </section>
-  <section class="sessao5">
+  <section class="sessao5" id="sobre">
+    <div id="card_5">
+      <div id="titulo_card_5">
+        <img src="assets/logo_titulo_branca.png" alt="">
+      </div>
+      <div id="texto_card_5">
+        A Lifechips é uma empresa que busca oferecer produtos saborosos e saudáveis, produzidos de forma artesanal 
+        com ingredientes de alta qualidade. O foco é oferecer aos consumidores uma opção de lanche prático e rápido, sem 
+        abrir mão do sabor e da qualidade.
+        saudáveis, produzidos de forma artesanal 
+        com ingredientes de alta qualidade. O foco é oferecer aos consumidores uma opção de lanche prático
+      </div>
+    </div>
+  </section>
+  <section class="sessao6" id="contato">
     <div class="titulo_sessao">
       <h1>Contatos</h1>
     </div>
-    <div id="card_5">
+    <div id="card_6">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1200px-Instagram_icon.png" alt="">
       <img src="https://static.vecteezy.com/system/resources/thumbnails/021/495/979/small/whatsapp-social-media-logo-icon-free-png.png" alt="">
       <a href="https://www.doritos.com"><img src="https://cdn-icons-png.flaticon.com/512/281/281769.png" alt=""></a>
